{
  "version": 4,
  "terraform_version": "0.13.7",
  "serial": 525,
  "lineage": "8f1462d1-5ee7-44e6-b52c-c6b2a5dfc246",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "cpc-back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-cpc-back/5fae6f91f65756a4",
            "arn_suffix": "app/tars-opsdev-cpc-cpc-back/5fae6f91f65756a4",
            "dns_name": "internal-tars-opsdev-cpc-cpc-back-1437699250.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-cpc-back/5fae6f91f65756a4",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tars-opsdev-cpc-cpc-back",
            "security_groups": [
              "sg-b6c76cca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-cfd84387"
              },
              {
                "subnet_id": "subnet-d54ec6b3"
              },
              {
                "subnet_id": "subnet-f9408aa3"
              }
            ],
            "subnets": [
              "subnet-cfd84387",
              "subnet-d54ec6b3",
              "subnet-f9408aa3"
            ],
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/cpc-back",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/cpc-back",
              "Project": "tars"
            },
            "vpc_id": "vpc-91eab8f7",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb",
            "module.cpc-back.module.subnets.aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "cpc-front-dva",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-dva/7413f006438dbe77",
            "arn_suffix": "app/tars-opsdev-cpc-dva/7413f006438dbe77",
            "dns_name": "tars-opsdev-cpc-dva-864144566.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-dva/7413f006438dbe77",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tars-opsdev-cpc-dva",
            "security_groups": [
              "sg-d1da71ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006c0b7afde404b1e"
              },
              {
                "subnet_id": "subnet-07b673e8acc350d4f"
              },
              {
                "subnet_id": "subnet-0eb1ef15f793b37f5"
              }
            ],
            "subnets": [
              "subnet-006c0b7afde404b1e",
              "subnet-07b673e8acc350d4f",
              "subnet-0eb1ef15f793b37f5"
            ],
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dva",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dva",
              "Project": "tars"
            },
            "vpc_id": "vpc-91eab8f7",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dva-alb",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "cpc-front-dvsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-dvsa/bc3a21aefd60187b",
            "arn_suffix": "app/tars-opsdev-cpc-dvsa/bc3a21aefd60187b",
            "dns_name": "internal-tars-opsdev-cpc-dvsa-760439928.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-dvsa/bc3a21aefd60187b",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tars-opsdev-cpc-dvsa",
            "security_groups": [
              "sg-fdc46f81"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-044ec662"
              },
              {
                "subnet_id": "subnet-2458927e"
              },
              {
                "subnet_id": "subnet-a1d843e9"
              }
            ],
            "subnets": [
              "subnet-044ec662",
              "subnet-2458927e",
              "subnet-a1d843e9"
            ],
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dvsa",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dvsa",
              "Project": "tars"
            },
            "vpc_id": "vpc-91eab8f7",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dvsa-alb",
            "module.cpc-front.module.subnets.aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "cpc-front-dvsa-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-dvsa-internet/7e4ab2cb6ea7b97b",
            "arn_suffix": "app/tars-opsdev-cpc-dvsa-internet/7e4ab2cb6ea7b97b",
            "dns_name": "tars-opsdev-cpc-dvsa-internet-2065130450.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-dvsa-internet/7e4ab2cb6ea7b97b",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tars-opsdev-cpc-dvsa-internet",
            "security_groups": [
              "sg-030be28a13b81c5a0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006c0b7afde404b1e"
              },
              {
                "subnet_id": "subnet-07b673e8acc350d4f"
              },
              {
                "subnet_id": "subnet-0eb1ef15f793b37f5"
              }
            ],
            "subnets": [
              "subnet-006c0b7afde404b1e",
              "subnet-07b673e8acc350d4f",
              "subnet-0eb1ef15f793b37f5"
            ],
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dvsa-internet",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dvsa-internet",
              "Project": "tars"
            },
            "vpc_id": "vpc-91eab8f7",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dvsa-internet-alb",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "cpc-front-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-internal/36609345375cf92c",
            "arn_suffix": "app/tars-opsdev-cpc-internal/36609345375cf92c",
            "dns_name": "internal-tars-opsdev-cpc-internal-769413504.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-internal/36609345375cf92c",
            "idle_timeout": 300,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tars-opsdev-cpc-internal",
            "security_groups": [
              "sg-00cab1caed7fe4b47"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006c23c5b6420a115"
              },
              {
                "subnet_id": "subnet-0092782491804a4a6"
              },
              {
                "subnet_id": "subnet-0e505725418e27f03"
              }
            ],
            "subnets": [
              "subnet-006c23c5b6420a115",
              "subnet-0092782491804a4a6",
              "subnet-0e505725418e27f03"
            ],
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/internal",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/internal",
              "Project": "tars"
            },
            "vpc_id": "vpc-91eab8f7",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.cpc-front-internal-alb",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "cpc-back-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-cpc-back/5fae6f91f65756a4/fe6c9d456321658a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-back-8080/b6c9178d8089cc5d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-cpc-back/5fae6f91f65756a4/fe6c9d456321658a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-cpc-back/5fae6f91f65756a4",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.cpc-back",
            "aws_alb_target_group.cpc-back-8080",
            "aws_security_group.cpc-back-alb",
            "module.cpc-back.module.subnets.aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "cpc-front-dva-7443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-dva/7413f006438dbe77/953b991510b6d64a",
            "certificate_arn": "arn:aws:acm:eu-west-1:652856684323:certificate/b4d60b74-4d24-431f-a655-29e56b702483",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dva-7443/ce466f75a50901fc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-dva/7413f006438dbe77/953b991510b6d64a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-dva/7413f006438dbe77",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.cpc-front-dva",
            "aws_alb_target_group.cpc-front-dva-7443",
            "aws_security_group.cpc-front-dva-alb",
            "data.aws_acm_certificate.cpc_tars_dvsacloud_uk",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "cpc-front-dvsa-8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-dvsa/bc3a21aefd60187b/d98dd3085769ff9b",
            "certificate_arn": "arn:aws:acm:eu-west-1:652856684323:certificate/b4d60b74-4d24-431f-a655-29e56b702483",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dvsa-8443/0803f2ebff78c656",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-dvsa/bc3a21aefd60187b/d98dd3085769ff9b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-dvsa/bc3a21aefd60187b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.cpc-front-dvsa",
            "aws_alb_target_group.cpc-front-dvsa-8443",
            "aws_security_group.cpc-front-dvsa-alb",
            "data.aws_acm_certificate.cpc_tars_dvsa_aws",
            "module.cpc-front.module.subnets.aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "cpc-front-dvsa-internet-8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-dvsa-internet/7e4ab2cb6ea7b97b/5934379773747f3e",
            "certificate_arn": "arn:aws:acm:eu-west-1:652856684323:certificate/b4d60b74-4d24-431f-a655-29e56b702483",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dvsa-inet-8443/a1c69ea750bc6897",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-dvsa-internet/7e4ab2cb6ea7b97b/5934379773747f3e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-dvsa-internet/7e4ab2cb6ea7b97b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.cpc-front-dvsa-internet",
            "aws_alb_target_group.cpc-front-dvsa-internet-8443",
            "aws_security_group.cpc-front-dvsa-internet-alb",
            "data.aws_acm_certificate.cpc_front_dvsa_internet",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "cpc-front-internal-9443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-internal/36609345375cf92c/5e3709242eaa2c10",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-internal-9443/d418a1fac413c213",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-internal/36609345375cf92c/5e3709242eaa2c10",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:loadbalancer/app/tars-opsdev-cpc-internal/36609345375cf92c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.cpc-front-internal",
            "aws_alb_target_group.cpc-front-internal-9443",
            "aws_security_group.cpc-front-internal-alb",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "cpc-back-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-back-8080/b6c9178d8089cc5d",
            "arn_suffix": "targetgroup/tars-opsdev-cpc-back-8080/b6c9178d8089cc5d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/healthcheckupservice/HealthCheckUpWebService/HealthCheckUpEndPoint?wsdl",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-back-8080/b6c9178d8089cc5d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tars-opsdev-cpc-back-8080",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "cpc-front-dva-7443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dva-7443/ce466f75a50901fc",
            "arn_suffix": "targetgroup/tars-opsdev-cpc-dva-7443/ce466f75a50901fc",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/cpctrain/ping",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dva-7443/ce466f75a50901fc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tars-opsdev-cpc-dva-7443",
            "port": 7443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "cpc-front-dvsa-8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dvsa-8443/0803f2ebff78c656",
            "arn_suffix": "targetgroup/tars-opsdev-cpc-dvsa-8443/0803f2ebff78c656",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/cpctrain/ping",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dvsa-8443/0803f2ebff78c656",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tars-opsdev-cpc-dvsa-8443",
            "port": 8443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "cpc-front-dvsa-internet-8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dvsa-inet-8443/a1c69ea750bc6897",
            "arn_suffix": "targetgroup/tars-opsdev-cpc-dvsa-inet-8443/a1c69ea750bc6897",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/cpctrain/ping",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dvsa-inet-8443/a1c69ea750bc6897",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tars-opsdev-cpc-dvsa-inet-8443",
            "port": 8443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "cpc-front-internal-9443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-internal-9443/d418a1fac413c213",
            "arn_suffix": "targetgroup/tars-opsdev-cpc-internal-9443/d418a1fac413c213",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/cpctrain/ping",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-internal-9443/d418a1fac413c213",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tars-opsdev-cpc-internal-9443",
            "port": 9443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "cpc-front-dva-7443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dva-7443/ce466f75a50901fc",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-dva/7413f006438dbe77/953b991510b6d64a/97a06d8094249c4f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/cpctrain/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-dva/7413f006438dbe77/953b991510b6d64a/97a06d8094249c4f",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-dva/7413f006438dbe77/953b991510b6d64a",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "dependencies": [
            "aws_alb.cpc-front-dva",
            "aws_alb_listener.cpc-front-dva-7443",
            "aws_alb_target_group.cpc-front-dva-7443",
            "aws_security_group.cpc-front-dva-alb",
            "data.aws_acm_certificate.cpc_tars_dvsacloud_uk",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "cpc-front-dvsa-8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dvsa-8443/0803f2ebff78c656",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-dvsa/bc3a21aefd60187b/d98dd3085769ff9b/33c14853654ccae8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/cpctrain/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-dvsa/bc3a21aefd60187b/d98dd3085769ff9b/33c14853654ccae8",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-dvsa/bc3a21aefd60187b/d98dd3085769ff9b",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "dependencies": [
            "aws_alb.cpc-front-dvsa",
            "aws_alb_listener.cpc-front-dvsa-8443",
            "aws_alb_target_group.cpc-front-dvsa-8443",
            "aws_security_group.cpc-front-dvsa-alb",
            "data.aws_acm_certificate.cpc_tars_dvsa_aws",
            "module.cpc-front.module.subnets.aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "cpc-front-dvsa-internet-8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-dvsa-inet-8443/a1c69ea750bc6897",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-dvsa-internet/7e4ab2cb6ea7b97b/5934379773747f3e/c42e8cae3921f46a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/cpctrain/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-dvsa-internet/7e4ab2cb6ea7b97b/5934379773747f3e/c42e8cae3921f46a",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-dvsa-internet/7e4ab2cb6ea7b97b/5934379773747f3e",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "dependencies": [
            "aws_alb.cpc-front-dvsa-internet",
            "aws_alb_listener.cpc-front-dvsa-internet-8443",
            "aws_alb_target_group.cpc-front-dvsa-internet-8443",
            "aws_security_group.cpc-front-dvsa-internet-alb",
            "data.aws_acm_certificate.cpc_front_dvsa_internet",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "cpc-front-internal-9443-cpcode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-internal-9443/d418a1fac413c213",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-internal/36609345375cf92c/5e3709242eaa2c10/62c579bc35021cc9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/cpcode/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-internal/36609345375cf92c/5e3709242eaa2c10/62c579bc35021cc9",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-internal/36609345375cf92c/5e3709242eaa2c10",
            "priority": 89,
            "tags": null,
            "tags_all": {}
          },
          "dependencies": [
            "aws_alb.cpc-front-internal",
            "aws_alb_listener.cpc-front-internal-9443",
            "aws_alb_target_group.cpc-front-internal-9443",
            "aws_security_group.cpc-front-internal-alb",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "cpc-front-internal-9443-cpctrain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-internal-9443/d418a1fac413c213",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-internal/36609345375cf92c/5e3709242eaa2c10/6fa1d04261e54c01",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/cpctrain/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-internal/36609345375cf92c/5e3709242eaa2c10/6fa1d04261e54c01",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-internal/36609345375cf92c/5e3709242eaa2c10",
            "priority": 88,
            "tags": null,
            "tags_all": {}
          },
          "dependencies": [
            "aws_alb.cpc-front-internal",
            "aws_alb_listener.cpc-front-internal-9443",
            "aws_alb_target_group.cpc-front-internal-9443",
            "aws_security_group.cpc-front-internal-alb",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "cpc-front-internal-9443-delegated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:targetgroup/tars-opsdev-cpc-internal-9443/d418a1fac413c213",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-internal/36609345375cf92c/5e3709242eaa2c10/46f8a49e049d7295",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/delegated/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener-rule/app/tars-opsdev-cpc-internal/36609345375cf92c/5e3709242eaa2c10/46f8a49e049d7295",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:652856684323:listener/app/tars-opsdev-cpc-internal/36609345375cf92c/5e3709242eaa2c10",
            "priority": 90,
            "tags": null,
            "tags_all": {}
          },
          "dependencies": [
            "aws_alb.cpc-front-internal",
            "aws_alb_listener.cpc-front-internal-9443",
            "aws_alb_target_group.cpc-front-internal-9443",
            "aws_security_group.cpc-front-internal-alb",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cpc-back-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:security-group/sg-b6c76cca",
            "description": "tars-opsdev-cpc/cpc-back-alb",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6298c097b75219c"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-b6c76cca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow TCP/8080 from TARS back",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af3b3d2d7d1bea93"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/8080 from TARSbatch",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d32ad186459717b"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/8080 from TARSfront",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086b255ad20ea41e2"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/8080 from cpc back",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6298c097b75219c"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/8080 from cpc back",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3332285e95d0e17"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tars-opsdev-cpc/cpc-back-alb",
            "name_prefix": "",
            "owner_id": "652856684323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/cpc-back-alb",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/cpc-back-alb",
              "Project": "tars"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cpc-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:security-group/sg-89c66df5",
            "description": "tars-opsdev-cpc/cpc-db",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "CPC to MIS",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e2c0ab95a2b1496"
                ],
                "self": false,
                "to_port": 1521
              }
            ],
            "id": "sg-89c66df5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow TCP/1521 from Bastion",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02683b53d8b90594e"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/1521 from CPC Batch",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0737e84aeb236f07f"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/1521 from CPC",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6298c097b75219c"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/1521 from Jenkinsctrl",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0049364e43e54519a"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/1521 from MIS DB",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e2c0ab95a2b1496"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/1521 from Mock",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db80e623fb9dbd0a"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/1521 from Prometheus to RDS",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5b5f68ceb2f83ee"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/1521 from TARS Batch",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d32ad186459717b"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/1521 inbound",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b52b029e3015418"
                ],
                "self": false,
                "to_port": 1521
              }
            ],
            "name": "tars-opsdev-cpc/cpc-db",
            "name_prefix": "",
            "owner_id": "652856684323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/cpc-db",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/cpc-db",
              "Project": "tars"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cpc-front-dva-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:security-group/sg-d1da71ad",
            "description": "tars-opsdev-cpc/dva-alb",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 7443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3332285e95d0e17"
                ],
                "self": false,
                "to_port": 7443
              }
            ],
            "id": "sg-d1da71ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "148.253.134.213/32",
                  "194.32.31.1/32",
                  "194.32.29.1/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "54.72.37.158/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tars-opsdev-cpc/dva-alb",
            "name_prefix": "",
            "owner_id": "652856684323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dva-alb",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dva-alb",
              "Project": "tars"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cpc-front-dvsa-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:security-group/sg-fdc46f81",
            "description": "tars-opsdev-cpc/dvsa-alb",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3332285e95d0e17"
                ],
                "self": false,
                "to_port": 8443
              }
            ],
            "id": "sg-fdc46f81",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tars-opsdev-cpc/dvsa-alb",
            "name_prefix": "",
            "owner_id": "652856684323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dvsa-alb",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dvsa-alb",
              "Project": "tars"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cpc-front-dvsa-internet-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:security-group/sg-030be28a13b81c5a0",
            "description": "tars-opsdev-cpc/dvsa-internet-alb",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-012da419ebe749f4b"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3332285e95d0e17"
                ],
                "self": false,
                "to_port": 8443
              }
            ],
            "id": "sg-030be28a13b81c5a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "135.196.73.204/32",
                  "213.160.121.250/32",
                  "10.201.80.0/21",
                  "10.69.3.64/26",
                  "10.69.131.64/26",
                  "148.253.134.213/32",
                  "54.72.37.158/32",
                  "199.83.128.0/21",
                  "198.143.32.0/19",
                  "149.126.72.0/21",
                  "103.28.248.0/22",
                  "185.11.124.0/22",
                  "192.230.64.0/18",
                  "45.64.64.0/22",
                  "107.154.0.0/16",
                  "45.60.0.0/16",
                  "45.223.0.0/16",
                  "54.76.206.25/32",
                  "10.69.3.15/32",
                  "10.69.3.16/32",
                  "10.69.3.17/32",
                  "10.69.3.18/32",
                  "10.69.1.70/31",
                  "10.84.192.159/32",
                  "10.84.192.161/32",
                  "85.115.53.201/32",
                  "80.194.75.82/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "154.14.88.249/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "34.242.28.119/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "52.214.31.165/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tars-opsdev-cpc/dvsa-internet-alb",
            "name_prefix": "",
            "owner_id": "652856684323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dvsa-internet-alb",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/dvsa-internet-alb",
              "Project": "tars"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cpc-front-internal-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:security-group/sg-00cab1caed7fe4b47",
            "description": "tars-opsdev-cpc/internal-alb",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3332285e95d0e17"
                ],
                "self": false,
                "to_port": 9443
              }
            ],
            "id": "sg-00cab1caed7fe4b47",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b4d13ba5692709e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tars-opsdev-cpc/internal-alb",
            "name_prefix": "",
            "owner_id": "652856684323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/internal-alb",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/internal-alb",
              "Project": "tars"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cpc-oem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:security-group/sg-40c46f3c",
            "description": "tars-opsdev-cpc/oem",
            "egress": [],
            "id": "sg-40c46f3c",
            "ingress": [],
            "name": "tars-opsdev-cpc/oem",
            "name_prefix": "",
            "owner_id": "652856684323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/oem",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc/oem",
              "Project": "tars"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cpc_batch_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:security-group/sg-07d44bc911f29f674",
            "description": "tars-opsdev-cpc-cpc-batch-efs",
            "egress": [],
            "id": "sg-07d44bc911f29f674",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0737e84aeb236f07f"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "tars-opsdev-cpc-cpc-batch-efs",
            "name_prefix": "",
            "owner_id": "652856684323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc-cpc-batch-efs",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Name": "tars-opsdev-cpc-cpc-batch-efs",
              "Project": "tars"
            },
            "timeouts": null,
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "active_mq_ingress_cpc_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/61617 from CPC Back",
            "from_port": 61617,
            "id": "sgrule-694115920",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-3c8a2440",
            "self": false,
            "source_security_group_id": "sg-0c6298c097b75219c",
            "to_port": 61617,
            "type": "ingress"
          },
          "dependencies": [
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_egress_elc_port_11211",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "cpc backend to 11211 elasticache",
            "from_port": 11211,
            "id": "sgrule-1827371514",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6298c097b75219c",
            "self": false,
            "source_security_group_id": "sg-a78d23db",
            "to_port": 11211,
            "type": "egress"
          },
          "dependencies": [
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_egress_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 from Bastion to RDS",
            "from_port": 1521,
            "id": "sgrule-1017749000",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02683b53d8b90594e",
            "self": false,
            "source_security_group_id": "sg-89c66df5",
            "to_port": 1521,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-back-alb_egress_cpc-back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3995915473",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-b6c76cca",
            "self": false,
            "source_security_group_id": "sg-0c6298c097b75219c",
            "to_port": 8080,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb",
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-back-alb_ingress_cpc_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3607401334",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-b6c76cca",
            "self": false,
            "source_security_group_id": "sg-0d3332285e95d0e17",
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb",
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-back-ingress-cpc-back-alb-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-954060256",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6298c097b75219c",
            "self": false,
            "source_security_group_id": "sg-b6c76cca",
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb",
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-alb_egress_cpc-front-7443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 7443,
            "id": "sgrule-1523914560",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-d1da71ad",
            "self": false,
            "source_security_group_id": "sg-0d3332285e95d0e17",
            "to_port": 7443,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dva-alb",
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-alb_egress_cpc-front-8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8443,
            "id": "sgrule-1243463698",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-fdc46f81",
            "self": false,
            "source_security_group_id": "sg-0d3332285e95d0e17",
            "to_port": 8443,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dvsa-alb",
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-alb_egress_cpc-front-9443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9443,
            "id": "sgrule-4019395847",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00cab1caed7fe4b47",
            "self": false,
            "source_security_group_id": "sg-0d3332285e95d0e17",
            "to_port": 9443,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-internal-alb",
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-alb_egress_cpc-front-dvsa-internet-8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8443,
            "id": "sgrule-2064127429",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-030be28a13b81c5a0",
            "self": false,
            "source_security_group_id": "sg-0d3332285e95d0e17",
            "to_port": 8443,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dvsa-internet-alb",
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-alb_ingress_dva-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "148.253.134.213/32",
              "194.32.31.1/32",
              "194.32.29.1/32",
              "54.72.37.158/32"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1964758748",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-d1da71ad",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dva-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-alb_ingress_dvsa-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-182196375",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-fdc46f81",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dvsa-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-alb_ingress_dvsa-internet-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "135.196.73.204/32",
              "213.160.121.250/32",
              "10.201.80.0/21",
              "10.69.3.64/26",
              "10.69.131.64/26",
              "148.253.134.213/32",
              "54.72.37.158/32",
              "199.83.128.0/21",
              "198.143.32.0/19",
              "149.126.72.0/21",
              "103.28.248.0/22",
              "185.11.124.0/22",
              "192.230.64.0/18",
              "45.64.64.0/22",
              "107.154.0.0/16",
              "45.60.0.0/16",
              "45.223.0.0/16",
              "54.76.206.25/32",
              "52.214.31.165/32",
              "10.69.3.15/32",
              "10.69.3.16/32",
              "10.69.3.17/32",
              "10.69.3.18/32",
              "10.69.1.70/31",
              "10.84.192.159/32",
              "10.84.192.161/32",
              "85.115.53.201/32",
              "80.194.75.82/32",
              "34.242.28.119/32",
              "154.14.88.249/32"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-4199845882",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-030be28a13b81c5a0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dvsa-internet-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-alb_ingress_public-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1221129778",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00cab1caed7fe4b47",
            "self": false,
            "source_security_group_id": "sg-02b4d13ba5692709e",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-internal-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-egress-cpc-back-alb-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-918993425",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3332285e95d0e17",
            "self": false,
            "source_security_group_id": "sg-b6c76cca",
            "to_port": 8080,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb",
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-egress-tars-back-alb-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3758864100",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3332285e95d0e17",
            "self": false,
            "source_security_group_id": "sg-fc78d680",
            "to_port": 8080,
            "type": "egress"
          },
          "dependencies": [
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-ingress-cpc-front-dvs-alb-7443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 7443,
            "id": "sgrule-890682745",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3332285e95d0e17",
            "self": false,
            "source_security_group_id": "sg-d1da71ad",
            "to_port": 7443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dva-alb",
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-ingress-cpc-front-dvsa-alb-8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8443,
            "id": "sgrule-2873864702",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3332285e95d0e17",
            "self": false,
            "source_security_group_id": "sg-fdc46f81",
            "to_port": 8443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dvsa-alb",
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-ingress-cpc-front-dvsa-internet-alb-8443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8443,
            "id": "sgrule-2900027237",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3332285e95d0e17",
            "self": false,
            "source_security_group_id": "sg-030be28a13b81c5a0",
            "to_port": 8443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-dvsa-internet-alb",
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front-ingress-cpc-front-internal-alb-9443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9443,
            "id": "sgrule-1172529503",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3332285e95d0e17",
            "self": false,
            "source_security_group_id": "sg-00cab1caed7fe4b47",
            "to_port": 9443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-internal-alb",
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc-front_egress_kms_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow use of KMS endpoint",
            "from_port": 0,
            "id": "sgrule-4117434528",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d3332285e95d0e17",
            "self": false,
            "source_security_group_id": "sg-0e832d72",
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_back_alb_ingress_cpc_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/8080 from cpc back",
            "from_port": 8080,
            "id": "sgrule-2783265644",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-b6c76cca",
            "self": false,
            "source_security_group_id": "sg-0c6298c097b75219c",
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb",
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_back_alb_ingress_tars_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/8080 from TARS back",
            "from_port": 8080,
            "id": "sgrule-1868188210",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-b6c76cca",
            "self": false,
            "source_security_group_id": "sg-0af3b3d2d7d1bea93",
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_back_egress_active_mq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/61617 to AWS MQ",
            "from_port": 61617,
            "id": "sgrule-2974075213",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6298c097b75219c",
            "self": false,
            "source_security_group_id": "sg-3c8a2440",
            "to_port": 61617,
            "type": "egress"
          },
          "dependencies": [
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_back_egress_cpc_back_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/8080 to CPC back ALB",
            "from_port": 8080,
            "id": "sgrule-2240639536",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6298c097b75219c",
            "self": false,
            "source_security_group_id": "sg-b6c76cca",
            "to_port": 8080,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb",
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_back_egress_dvla_elise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "51.231.10.112/32"
            ],
            "description": "Allow TCP/443 to DVLA Elise",
            "from_port": 443,
            "id": "sgrule-1547178918",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6298c097b75219c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "dependencies": [
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_back_egress_kms_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow use of KMS endpoint",
            "from_port": 0,
            "id": "sgrule-1808882543",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c6298c097b75219c",
            "self": false,
            "source_security_group_id": "sg-0e832d72",
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_back_egress_tars_back_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/8080 to TARS back ALB",
            "from_port": 8080,
            "id": "sgrule-1396735685",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6298c097b75219c",
            "self": false,
            "source_security_group_id": "sg-fc78d680",
            "to_port": 8080,
            "type": "egress"
          },
          "dependencies": [
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_batch_efs_ingress_cpc_batch_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2049,
            "id": "sgrule-2007183180",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07d44bc911f29f674",
            "self": false,
            "source_security_group_id": "sg-0737e84aeb236f07f",
            "to_port": 2049,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc_batch_efs",
            "data.terraform_remote_state.base",
            "module.cpc_batch.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_batch_egress_active_mq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/61617 to AWS MQ",
            "from_port": 61617,
            "id": "sgrule-1100441750",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0737e84aeb236f07f",
            "self": false,
            "source_security_group_id": "sg-3c8a2440",
            "to_port": 61617,
            "type": "egress"
          },
          "dependencies": [
            "data.terraform_remote_state.base",
            "module.cpc_batch.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_batch_egress_cpc_batch_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2049,
            "id": "sgrule-3910107614",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0737e84aeb236f07f",
            "self": false,
            "source_security_group_id": "sg-07d44bc911f29f674",
            "to_port": 2049,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc_batch_efs",
            "data.terraform_remote_state.base",
            "module.cpc_batch.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_batch_egress_cpc_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 to CPC DB",
            "from_port": 1521,
            "id": "sgrule-2306726572",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0737e84aeb236f07f",
            "self": false,
            "source_security_group_id": "sg-89c66df5",
            "to_port": 1521,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-db",
            "data.terraform_remote_state.base",
            "module.cpc_batch.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_batch_egress_dvla_elise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "51.231.10.112/32"
            ],
            "description": "Allow TCP/443 to DVLA Elise",
            "from_port": 443,
            "id": "sgrule-2901127805",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0737e84aeb236f07f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "dependencies": [
            "data.terraform_remote_state.base",
            "module.cpc_batch.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_batch_egress_kms_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow use of KMS endpoint",
            "from_port": 0,
            "id": "sgrule-666038399",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0737e84aeb236f07f",
            "self": false,
            "source_security_group_id": "sg-0e832d72",
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "data.terraform_remote_state.base",
            "module.cpc_batch.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_batch_egress_tars_back_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/8080 to TARS back ALB",
            "from_port": 8080,
            "id": "sgrule-3084001771",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0737e84aeb236f07f",
            "self": false,
            "source_security_group_id": "sg-fc78d680",
            "to_port": 8080,
            "type": "egress"
          },
          "dependencies": [
            "data.terraform_remote_state.base",
            "data.terraform_remote_state.tars-core",
            "module.cpc_batch.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_db_ingress_cpc_batch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 from CPC Batch",
            "from_port": 1521,
            "id": "sgrule-2441641194",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-89c66df5",
            "self": false,
            "source_security_group_id": "sg-0737e84aeb236f07f",
            "to_port": 1521,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-db",
            "data.terraform_remote_state.base",
            "module.cpc_batch.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_egress_oracle_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 to CPC DB",
            "from_port": 1521,
            "id": "sgrule-1844413826",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6298c097b75219c",
            "self": false,
            "source_security_group_id": "sg-89c66df5",
            "to_port": 1521,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-db",
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cpc_egress_sftpplus_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.167.2.208/28",
              "10.167.2.224/28",
              "10.167.2.240/28"
            ],
            "description": "Allow TCP/15021 from SFTPPlus to CPC Batch",
            "from_port": 15021,
            "id": "sgrule-4038388994",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0737e84aeb236f07f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 15021,
            "type": "egress"
          },
          "dependencies": [
            "data.terraform_remote_state.base",
            "module.cpc_batch.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elc_ingress_backend_port_11211",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "cpc backend to 11211 elasticache",
            "from_port": 11211,
            "id": "sgrule-2116388644",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-a78d23db",
            "self": false,
            "source_security_group_id": "sg-0c6298c097b75219c",
            "to_port": 11211,
            "type": "ingress"
          },
          "dependencies": [
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkinsctrl_egress_oracle_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 to RDS",
            "from_port": 1521,
            "id": "sgrule-1960727421",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0049364e43e54519a",
            "self": false,
            "source_security_group_id": "sg-89c66df5",
            "to_port": 1521,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "oracle_db_ingress_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 from Bastion",
            "from_port": 1521,
            "id": "sgrule-599523889",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-89c66df5",
            "self": false,
            "source_security_group_id": "sg-02683b53d8b90594e",
            "to_port": 1521,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "oracle_db_ingress_cpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 from CPC",
            "from_port": 1521,
            "id": "sgrule-1051745765",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-89c66df5",
            "self": false,
            "source_security_group_id": "sg-0c6298c097b75219c",
            "to_port": 1521,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-db",
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "oracle_db_ingress_jemkinsctrl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 from Jenkinsctrl",
            "from_port": 1521,
            "id": "sgrule-4001844109",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-89c66df5",
            "self": false,
            "source_security_group_id": "sg-0049364e43e54519a",
            "to_port": 1521,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "oracle_db_ingress_prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 from Prometheus to RDS",
            "from_port": 1521,
            "id": "sgrule-3536662452",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-89c66df5",
            "self": false,
            "source_security_group_id": "sg-0b5b5f68ceb2f83ee",
            "to_port": 1521,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "prometheus_egress_oracle_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 from Prometheus to RDS",
            "from_port": 1521,
            "id": "sgrule-2626766163",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5b5f68ceb2f83ee",
            "self": false,
            "source_security_group_id": "sg-89c66df5",
            "to_port": 1521,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tars-back-alb-ingress-cpc-front-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3499570290",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-fc78d680",
            "self": false,
            "source_security_group_id": "sg-0d3332285e95d0e17",
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.cpc-front.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tars_back_alb_ingress_cpc_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/8080 from CPC back",
            "from_port": 8080,
            "id": "sgrule-2725700712",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-fc78d680",
            "self": false,
            "source_security_group_id": "sg-0c6298c097b75219c",
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.cpc-back.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tars_back_egress_cpc_back_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/8080 to CPC back ALB",
            "from_port": 8080,
            "id": "sgrule-2217959237",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0af3b3d2d7d1bea93",
            "self": false,
            "source_security_group_id": "sg-b6c76cca",
            "to_port": 8080,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tars_batch_egress_cpc_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/8080 to cpc back ALB",
            "from_port": 8080,
            "id": "sgrule-3051407755",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d32ad186459717b",
            "self": false,
            "source_security_group_id": "sg-b6c76cca",
            "to_port": 8080,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tars_batch_egress_cpc_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 to cpc DB",
            "from_port": 1521,
            "id": "sgrule-1568816697",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d32ad186459717b",
            "self": false,
            "source_security_group_id": "sg-89c66df5",
            "to_port": 1521,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tars_batch_ingress_cpc_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/1521 from TARS Batch",
            "from_port": 1521,
            "id": "sgrule-891769449",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-89c66df5",
            "self": false,
            "source_security_group_id": "sg-01d32ad186459717b",
            "to_port": 1521,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tars_core_apache_egress_cpc_internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/80 to CPC Front Internal ALB",
            "from_port": 80,
            "id": "sgrule-2676612333",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02b4d13ba5692709e",
            "self": false,
            "source_security_group_id": "sg-00cab1caed7fe4b47",
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-front-internal-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tars_core_frontend_egress_cpc_backend_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/8080 to CPC back ALB",
            "from_port": 8080,
            "id": "sgrule-2766549442",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-086b255ad20ea41e2",
            "self": false,
            "source_security_group_id": "sg-b6c76cca",
            "to_port": 8080,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tars_cpc_backend_ingress_tars_batch_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/8080 from TARSbatch",
            "from_port": 8080,
            "id": "sgrule-2926726368",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-b6c76cca",
            "self": false,
            "source_security_group_id": "sg-01d32ad186459717b",
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tars_cpc_backend_ingress_tars_frontend_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow TCP/8080 from TARSfront",
            "from_port": 8080,
            "id": "sgrule-2419646588",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-b6c76cca",
            "self": false,
            "source_security_group_id": "sg-086b255ad20ea41e2",
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cpc-back-alb"
          ]
        }
      ]
    },
    {
      "module": "module.cpc-back",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:security-group/sg-0c6298c097b75219c",
            "description": "tars-opsdev-cpc/cpc-back",
            "egress": [
              {
                "cidr_blocks": [
                  "51.231.10.112/32"
                ],
                "description": "Allow TCP/443 to DVLA Elise",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/1521 to CPC DB",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-89c66df5"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/61617 to AWS MQ",
                "from_port": 61617,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-3c8a2440"
                ],
                "self": false,
                "to_port": 61617
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/8080 to CPC back ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-b6c76cca"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/8080 to TARS back ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-fc78d680"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/8080 to TARS mock ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ef685dfd5e0a90a"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow use of KMS endpoint",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0e832d72"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "cpc backend to 11211 elasticache",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-a78d23db"
                ],
                "self": false,
                "to_port": 11211
              }
            ],
            "id": "sg-0c6298c097b75219c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-b6c76cca"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tars-opsdev-cpc/cpc-back",
            "name_prefix": "",
            "owner_id": "652856684323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-back",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-back",
              "Project": "tars"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "module": "module.cpc-back.module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-8503cefe",
            "route_table_id": "rtb-7f357006",
            "subnet_id": "subnet-d54ec6b3"
          },
          "dependencies": [
            "module.cpc-back.module.subnets.aws_subnet.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-ab00cdd0",
            "route_table_id": "rtb-71327708",
            "subnet_id": "subnet-cfd84387"
          },
          "dependencies": [
            "module.cpc-back.module.subnets.aws_subnet.subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-b904c9c2",
            "route_table_id": "rtb-ae3075d7",
            "subnet_id": "subnet-f9408aa3"
          },
          "dependencies": [
            "module.cpc-back.module.subnets.aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.cpc-back.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:subnet/subnet-d54ec6b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.167.3.0/28",
            "id": "subnet-d54ec6b3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652856684323",
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-back/eu-west-1a",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-back/eu-west-1a",
              "Project": "tars"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:subnet/subnet-cfd84387",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.167.3.16/28",
            "id": "subnet-cfd84387",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652856684323",
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-back/eu-west-1b",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-back/eu-west-1b",
              "Project": "tars"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:subnet/subnet-f9408aa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.167.3.32/28",
            "id": "subnet-f9408aa3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652856684323",
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-back/eu-west-1c",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-back/eu-west-1c",
              "Project": "tars"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "module": "module.cpc-front",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:security-group/sg-0d3332285e95d0e17",
            "description": "tars-opsdev-cpc/cpc-front",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-b6c76cca",
                  "sg-fc78d680"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow use of KMS endpoint",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0e832d72"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "CPC egress TCP/9090 to gov gateway",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ef685dfd5e0a90a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0d3332285e95d0e17",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 7443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-d1da71ad"
                ],
                "self": false,
                "to_port": 7443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030be28a13b81c5a0",
                  "sg-fdc46f81"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00cab1caed7fe4b47"
                ],
                "self": false,
                "to_port": 9443
              }
            ],
            "name": "tars-opsdev-cpc/cpc-front",
            "name_prefix": "",
            "owner_id": "652856684323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-front",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-front",
              "Project": "tars"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "module": "module.cpc-front.module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-4e00cd35",
            "route_table_id": "rtb-7f357006",
            "subnet_id": "subnet-044ec662"
          },
          "dependencies": [
            "module.cpc-front.module.subnets.aws_subnet.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061dd07d",
            "route_table_id": "rtb-71327708",
            "subnet_id": "subnet-a1d843e9"
          },
          "dependencies": [
            "module.cpc-front.module.subnets.aws_subnet.subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-6903ce12",
            "route_table_id": "rtb-ae3075d7",
            "subnet_id": "subnet-2458927e"
          },
          "dependencies": [
            "module.cpc-front.module.subnets.aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.cpc-front.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:subnet/subnet-044ec662",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.167.2.112/28",
            "id": "subnet-044ec662",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652856684323",
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-front/eu-west-1a",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-front/eu-west-1a",
              "Project": "tars"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:subnet/subnet-a1d843e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.167.2.128/28",
            "id": "subnet-a1d843e9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652856684323",
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-front/eu-west-1b",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-front/eu-west-1b",
              "Project": "tars"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:subnet/subnet-2458927e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.167.2.144/28",
            "id": "subnet-2458927e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652856684323",
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-front/eu-west-1c",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-front/eu-west-1c",
              "Project": "tars"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "module": "module.cpc_batch",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:security-group/sg-0737e84aeb236f07f",
            "description": "tars-opsdev-cpc/cpc-batch",
            "egress": [
              {
                "cidr_blocks": [
                  "10.167.2.208/28",
                  "10.167.2.224/28",
                  "10.167.2.240/28"
                ],
                "description": "Allow TCP/15021 from SFTPPlus to CPC Batch",
                "from_port": 15021,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15021
              },
              {
                "cidr_blocks": [
                  "51.231.10.112/32"
                ],
                "description": "Allow TCP/443 to DVLA Elise",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d44bc911f29f674"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/1521 to CPC DB",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-89c66df5"
                ],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/61617 to AWS MQ",
                "from_port": 61617,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-3c8a2440"
                ],
                "self": false,
                "to_port": 61617
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/8080 to TARS back ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-fc78d680"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow TCP/8080 to TARS mock ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ef685dfd5e0a90a"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow use of KMS endpoint",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0e832d72"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0737e84aeb236f07f",
            "ingress": [],
            "name": "tars-opsdev-cpc/cpc-batch",
            "name_prefix": "",
            "owner_id": "652856684323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-batch",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-batch",
              "Project": "tars"
            },
            "timeouts": null,
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_cpc_batch_efs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0285cc294e25a42f0",
            "route_table_id": "rtb-7f357006",
            "subnet_id": "subnet-02f11d003dc36d22b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base",
            "module.subnets_cpc_batch_efs.aws_subnet.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c42bd4a64d3422bd",
            "route_table_id": "rtb-71327708",
            "subnet_id": "subnet-070239ce8c771c2f4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base",
            "module.subnets_cpc_batch_efs.aws_subnet.subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084bc3a2fcd5ed93a",
            "route_table_id": "rtb-ae3075d7",
            "subnet_id": "subnet-0a6847d3d5145fd32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.base",
            "module.subnets_cpc_batch_efs.aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_cpc_batch_efs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:subnet/subnet-02f11d003dc36d22b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.167.5.112/28",
            "id": "subnet-02f11d003dc36d22b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652856684323",
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-batch-efs/eu-west-1a",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-batch-efs/eu-west-1a",
              "Project": "tars"
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.terraform_remote_state.base"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:subnet/subnet-070239ce8c771c2f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.167.5.128/28",
            "id": "subnet-070239ce8c771c2f4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652856684323",
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-batch-efs/eu-west-1b",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-batch-efs/eu-west-1b",
              "Project": "tars"
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.terraform_remote_state.base"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652856684323:subnet/subnet-0a6847d3d5145fd32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.167.5.144/28",
            "id": "subnet-0a6847d3d5145fd32",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652856684323",
            "tags": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-batch-efs/eu-west-1c",
              "Project": "tars"
            },
            "tags_all": {
              "Component": "cpc",
              "Environment": "opsdev",
              "Module": "microservice",
              "Name": "tars-opsdev-cpc/cpc-batch-efs/eu-west-1c",
              "Project": "tars"
            },
            "vpc_id": "vpc-91eab8f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    }
  ]
}